<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Common Framework</string>
    <string name="action_settings">Settings</string>
    <string name="deep_linking_app_scheme">commonframe</string>
    <string name="deep_linking_http_scheme">http</string>
    <string name="deep_linking_http_host">www.commonframe.com</string>
    <string name="deep_linking_app_host">start</string>

    <!-- Error Dialog -->
    <string name="error_internet_unavailable_title">Connection Error</string>
    <string name="error_internet_unavailable_message">Internet is unavailable, please check your connection!</string>
    <!-- End Error Dialog -->


    <!-- Error -->
    <string name="error_parsing_fail">Parsing Failed!</string>
    <string name="error_connection_fail">Connection Failed!</string>
    <string name="error_auth_fail">Authentication Failed!</string>
    <string name="error_server_fail">Server Failed!</string>
    <string name="error_conneciton_time_out">Connection Time Out!</string>
    <string name="error_unknown">Unknown Error!</string>
    <!-- End Error -->


    <!-- Header -->
    <string name="header_bt_back">BACK</string>
    <string name="headr_bt_next">NEXT</string>
    <!-- End Header -->


    <!-- Login Activity -->
    <string name="a001_tv_user_name">Username: </string>
    <string name="a001_tv_password">Password: </string>
    <string name="a001_bt_login">Login</string>
    <string name="a001_bt_register">Register</string>
    <string name="a001_bt_forgot">Forgot My Password</string>
    <!-- End Login Activity -->


    <!-- Register Activity -->
    <string name="a002_tv_email">Email: </string>
    <string name="a002_tv_user_name">Username: </string>
    <string name="a002_tv_password">Password: </string>
    <string name="a002_tv_confirm">Confirm: </string>
    <string name="a002_bt_register">Register</string>
    <!-- End Register Activity -->


    <!-- Home Activity -->
    <string name="a003_bt_category">New Game</string>
    <string name="a003_bt_current">Current Game</string>
    <string name="a003_bt_howto">How To Play</string>
    <string name="a003_bt_logout">Log out</string>
    <string name="a003_bt_share">Share</string>
    <string name="a003_bt_pager">Pager</string>
    <string name="a003_bt_drawer">Drawer</string>
    <!-- End Home Activity -->


    <!-- Forgot Password Activity -->
    <string name="a004_bt_send">Send</string>
    <string name="a004_tv_email">Email: </string>
    <!-- End Forgot Password Activity -->


    <!-- How To Activity -->
    <string name="a005_tv_howto">HOW TO PLAY</string>
    <string name="a005_fling_view_tv_top">FLING VIEW TOP</string>
    <string name="a005_fling_view_tv_bottom">FLING VIEW BOTTOM</string>
    <string name="a005_fling_view_tv_left">FLING VIEW LEFT</string>
    <string name="a005_fling_view_tv_right">FLING VIEW RIGHT</string>
    <string name="a005_fling_view_img_des">Image Description</string>
    <!-- End How To Activity -->


    <!-- Current Game Activity -->
    <string name="a007_item_current_img_des">Current Image Icon</string>
    <!-- End Current Game Activity -->


    <!-- Alert Dialog -->
    <string name="alert_dialog_bt_ok">OK</string>
    <string name="alert_dialog_tv_title_default">WARNING</string>
    <string name="alert_dialog_tv_message_default">Error occurs.</string>
    <string name="alert_dialog_img_des">Alert Dialog Image Icon</string>
    <!-- End Alert Dialog -->


    <!-- Decision Dialog -->
    <string name="decision_dialog_bt_yes">YES</string>
    <string name="decision_dialog_bt_no">NO</string>
    <string name="decision_dialog_tv_title_default">ACTION</string>
    <string name="decision_dialog_tv_message_default">Do you want to complete this action?</string>
    <!-- End Decision Dialog -->


    <!-- Loading Dialog -->
    <string name="loading_dialog_tv">Loading&#8230;</string>
    <!-- End Loading Dialog -->


    <!-- Options Dialog Button -->
    <string name="options_dialog_button_icon_description">Common Button</string>
    <!-- End Options Dialog Button -->


    <!-- Options Dialog -->
    <string name="options_dialog_icon_description">Common Button</string>
    <!-- End Options Dialog -->
    
    <!-- Notification -->
    <string name="notification_bt_ok">OK</string>
    <string name="notification_bt_cancel">Cancel</string>
    <!-- End Notification -->

    <!-- Fetchable List View -->
    <string name="fetchable_pull_to_refresh">Pull to refresh</string>
    <string name="fetchable_release_to_refresh">Release to refresh</string>
    <string name="fetchable_refreshing">Refreshing…</string>
    <string name="fetchable_last_updated">Updated: %1$s</string>
    <!-- End Fetchable List View -->


    <!-- Slider Menu -->
    <string name="slider_menu_open">Slider Menu Opened</string>
    <string name="slider_menu_close">Slider Menu Closed</string>
    <!-- End Slider Menu -->

</resources>