<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_gravity="center" >

    <TextView
        android:id="@+id/decision_dialog_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/decision_dialog_tv_title_default"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/decision_dialog_tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/decision_dialog_tv_message_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/decision_dialog_bt_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/decision_dialog_bt_no" />

        <Button
            android:id="@+id/decision_dialog_bt_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/decision_dialog_bt_yes" />
    </LinearLayout>

</RelativeLayout>